# orga-ai-backend

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  TASKS.md  main.py  pyproject.toml  robyn.env
docs/: TASK_API.md
src/cli/: README_STREAMLIT.md  runmodel.py  runserver.py  streamlit_ui.py
src/database/: __init__.py  models.py
src/database/migrations/models/: 1_20250613014510_None.py  2_20250619163647_None.py
src/database/models/: __init__.py  base.py  calendar.py  category.py  enums.py  event.py  habit.py  notification.py  task.py  user.py
src/database/seeds/: README.md  __init__.py  category_seeds.py  cli.py  seed_runner.py  task_seeds.py  user_seeds.py
src/lib/: main.py  models.py  state.py  tools_func.py
src/lib/prompts/: system_prompt_template.md
src/lib/tools/: __init__.py  tasks.py  tasks_tools.py
src/server/: app.py
src/server/middleware/: auth.py
src/server/routes/: routes_tasks.py  routes_user.py  user_routes.py
src/server/schemas/: task_schemas.py
src/server/services/: task_service.py
src/server/utils/: jwt.py  responses.py
src/tools/: main.py  models.py  tools_func.py  utils.py
tests/: conftest.py
tests/integration/: test_tasks.py  test_users.py
